--- a/Modified template/New service appointment template.html
+++ b/Modified template/New service appointment template.html
@@ -58,7 +58,7 @@ overflow:hidden;
   <style type="text/css">
     h1{color: #001C2D; font-size: 29px; line-height: 1.2;}
     h2 {margin-top: 25px; color: #001C2D; font-size: 20.2px; line-height: 23.2px;}
-    h3 {margin-top: 0; color: #001C2D; font-size: 14px;}
+    h3 {margin-top: 0; font-size: 14px;}
     h4 {margin-top: 0;}
     h5 {font-size: 11.7px; color: #516173; letter-spacing: 1.2px; line-height: 13.5px; margin-top: 0;}
     .article-list h3{font-size: 16.8px;}
